# TraceBench

./: README.md  pyproject.toml  requirements.txt
log_viewer/: __init__.py
log_viewer/app/: __init__.py  dialogs.py  main.py  main_window.py  widgets.py
log_viewer/core/: __init__.py  filter_manager.py  io_handler.py  merge_handler.py  models.py
log_viewer/plot/: __init__.py  plot_widget.py
scripts/: generate_sample_data.py
tests/: __init__.py  test_header_diff.py  test_merge_join.py  test_time_offset.py
